# unai-unity-ai-connector

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Plan.md  README.md  UnaiGlobalConfig.asset
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
Assets/UnAI/: CHANGELOG.md  package.json
Assets/UnAI/Examples/: UnAI.Examples.asmdef  UnaiExampleChat.cs  UnaiExampleScene.unity
Examples/: UnaiExampleAgent.cs  UnaiExampleChat.cs  UnaiExampleScene.unity
Scripts/Agent/: MainThreadDispatcher.cs  UnAI.Agent.asmdef  UnaiAgent.cs  UnaiAgentConfig.cs  UnaiAgentEvents.cs  UnaiAgentStep.cs
Scripts/Agent/Http/: UnaiAgentHttpServer.cs
Scripts/Agent/Memory/: UnaiConversation.cs  UnaiMemoryStrategy.cs  UnaiTokenEstimator.cs
Scripts/Agent/Resouces/: McpResourceRegistry.cs
Scripts/Agent/Tools/: IUnaiTool.cs  UnaiToolRegistry.cs  UnaiToolResult.cs  UnaiToolSerializer.cs
Scripts/Editor/: UnAI.Editor.asmdef  UnaiHub.cs  UnaiSetupWizard.cs
Scripts/EditorAssistant/: UnAI.EditorAssistant.asmdef  UnaiAssistantTools.cs  UnaiAssistantWindow.cs
Scripts/MCP/: UnAI.MCP.asmdef  UnaiMcpEditorWindow.cs  UnaiMcpProtocol.cs  UnaiMcpServer.cs  UnaiMcpTransport.cs
Scripts/MCP/Core/: McpProtocol.cs  (+3 more)
Scripts/Runtime/: UnaiVersion.cs
Tools~/chainlit-unity/: app-nanobot.py  app.py  main.py  mock_server.py  pyproject.toml
Tools~/chainlit-unity/.chainlit/: config.toml
Tools~/chainlit-unity/config/: mcp_servers.toml
Tools~/chainlit-unity/utils/: http_client.py  mcp_manager.py
~Tools/chainlit-unity/: app-nanobot.py
(+57 files in other folders)
